optimized image loading

--- a/concentration1.html
+++ b/concentration1.html
@@ -107,6 +107,8 @@
                         <br>
                         <p class="wow fadeInUp" data-wow-delay="300ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
                         <p class="wow fadeInUp" data-wow-delay="400ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
+                        <a href="#" class="btn alime-btn mb-3 mb-sm-0 mr-4">Contact Me</a>
+                        <a href="#" class="btn alime-btn mb-3 mb-sm-0 mr-4">Contact Me</a>
                     </div>
                 </div>
             </div>
