--- a/portfolio.html
+++ b/portfolio.html
@@ -109,7 +109,7 @@
     </header>
 
     <!-- Breadcrumb Area Start -->
-    <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(img/bg-img/portfolio.png);">
+    <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(img/bg-img/portfolio.jpg);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -148,7 +148,7 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/concentration/con1s.png" alt="">
+                        <img src="img/concentration/con1s.jpg" alt="">
                         <div class="hover-content">
                             <a href="concentration1.html">1</a>
                         </div>
@@ -158,7 +158,7 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/concentration/con2s.png" alt="">
+                        <img src="img/concentration/con2s.jpg" alt="">
                         <div class="hover-content">
                             <a href="concentration2.html">2</a>
                         </div>
@@ -188,7 +188,7 @@
                 <!-- Single Gallery Item -->
                 <div id="mustbecol1" class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms" style="left: 0% !important;">
                     <div class="single-portfolio-content">
-                        <img src="img/concentration/con5ss.jpg" alt="">
+                        <img src="img/concentration/con5s.jpg" alt="">
                         <div class="hover-content">
                             <a href="concentration5.html">5</a>
                         </div>
@@ -198,7 +198,7 @@
                 <!-- Single Gallery Item -->
                 <div id="mustbecol2" class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/concentration/con6ss.jpg" alt="">
+                        <img src="img/concentration/con6s.jpg" alt="">
                         <div class="hover-content">
                             <a href="concentration6.html">6</a>
                         </div>
@@ -208,7 +208,7 @@
                 <!-- Single Gallery Item -->
                 <div id="mustbecol3" class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/concentration/con7.png" alt="">
+                        <img src="img/concentration/con7.jpg" alt="">
                         <div class="hover-content">
                             <a href="concentration7.html">7</a>
                         </div>
@@ -218,7 +218,7 @@
                 <!-- Single Gallery Item -->
                 <div id="mustbecol4" class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/concentration/con8s.png" alt="">
+                        <img src="img/concentration/con8s.jpg" alt="">
                         <div class="hover-content">
                             <a href="concentration8.html">8</a>
                         </div>
@@ -227,7 +227,7 @@
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/concentration/con9s.png" alt="">
+                        <img src="img/concentration/con9s.jpg" alt="">
                         <div class="hover-content">
                             <a href="concentration9.html">9</a>
                         </div>
@@ -236,7 +236,7 @@
 
                 <div id="mustbecol2" class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/concentration/con10s.png" alt="">
+                        <img src="img/concentration/con10s.jpg" alt="">
                         <div class="hover-content">
                             <a href="concentration10.html">10</a>
                         </div>
