added portfolio pieces

--- a/portfolio.html
+++ b/portfolio.html
@@ -150,7 +150,7 @@
                     <div class="single-portfolio-content">
                         <img src="img/concentration/con1s.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration1.html">1</a>
+                            <a href="concentration/concentration1.html">1</a>
                         </div>
                     </div>
                 </div>
@@ -160,7 +160,7 @@
                     <div class="single-portfolio-content">
                         <img src="img/concentration/con2s.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration2.html">2</a>
+                            <a href="concentration/concentration2.html">2</a>
                         </div>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                     <div class="single-portfolio-content">
                         <img src="img/concentration/con3s.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration3.html">3</a>
+                            <a href="concentration/concentration3.html">3</a>
                         </div>
                     </div>
                 </div>
@@ -180,7 +180,7 @@
                     <div class="single-portfolio-content">
                         <img src="img/concentration/con4s.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration4.html">4</a>
+                            <a href="concentration/concentration4.html">4</a>
                         </div>
                     </div>
                 </div>
@@ -192,7 +192,7 @@
                     <div class="single-portfolio-content">
                         <img src="img/concentration/con5s.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration5.html">5</a>
+                            <a href="concentration/concentration5.html">5</a>
                         </div>
                     </div>
                 </div>
@@ -202,7 +202,7 @@
                     <div class="single-portfolio-content">
                         <img src="img/concentration/con6s.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration6.html">6</a>
+                            <a href="concentration/concentration6.html">6</a>
                         </div>
                     </div>
                 </div>
@@ -212,7 +212,7 @@
                     <div class="single-portfolio-content">
                         <img src="img/concentration/con7.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration7.html">7</a>
+                            <a href="concentration/concentration7.html">7</a>
                         </div>
                     </div>
                 </div>
@@ -222,7 +222,7 @@
                     <div class="single-portfolio-content">
                         <img src="img/concentration/con8s.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration8.html">8</a>
+                            <a href="concentration/concentration8.html">8</a>
                         </div>
                     </div>
                 </div>
@@ -233,21 +233,21 @@
                     <div class="single-portfolio-content">
                         <img src="img/concentration/con9s.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration9.html">9</a>
+                            <a href="concentration/concentration9.html">9</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
                         <img src="img/concentration/con10s.jpg" alt="">
                         <div class="hover-content">
-                            <a href="concentration10.html">10</a>
+                            <a href="concentration/concentration10.html">10</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
                         <img src="img/breadth/breadth7s.jpg" alt="">
                         <div class="hover-content">
@@ -264,11 +264,20 @@
                         </div>
                     </div>
                 </div>
-            
+
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
                         <img src="img/breadth/breadth1.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration1.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio1.jpg" alt="">
                         <div class="hover-content">
                             <a href="concentration1.html">+</a>
                         </div>
@@ -293,9 +302,45 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio2.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration1.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio3.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration1.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
                         <img src="img/breadth/breadth5.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration1.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio4.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration1.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio5.jpg" alt="">
                         <div class="hover-content">
                             <a href="concentration1.html">+</a>
                         </div>
@@ -329,6 +374,15 @@
                     </div>
                 </div>
 
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio6.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration1.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
                         <img src="img/breadth/breadth10.jpg" alt="">
@@ -338,9 +392,36 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio7.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration1.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
                         <img src="img/breadth/breadth11.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration1.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio8.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration1.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio13.jpg" alt="">
                         <div class="hover-content">
                             <a href="concentration1.html">+</a>
                         </div>
