fixed template for individual pieces

--- a/portfolio.html
+++ b/portfolio.html
@@ -188,7 +188,7 @@
 
               <div class="row alime-portfolio">
                 <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms" style="left: 0% !important;">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
                         <img src="img/concentration/con5s.jpg" alt="">
                         <div class="hover-content">
