--- a/concentration/concentration1.html
+++ b/concentration/concentration1.html
@@ -94,19 +94,45 @@
     <!-- Header Area End -->
 
 
+    <!-- Breadcrumb Area Start -->
+    <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(../img/bg-img/portfolio.jpg);">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-12">
+                    <div class="breadcrumb-content text-center">
+                        <h2 class="page-title">No. 1: Lorem Ipsum</h2>
+                        <nav aria-label="breadcrumb">
+
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Breadcrumb Area End -->
+
     <!-- About Us Area Start -->
-    <div class="about-us-area section-padding-80-0 clearfix"><br>
+    <div class="about-us-area section-padding-80-0 clearfix">
         <div class="container">
             <div class="row align-items-center">
-              <div class="col-12 col-lg-12">
-                  <div class="about-us-content mb-80">
-                      <h3 class="wow fadeInUp" data-wow-delay="100ms">No. 1: Lorem Ipsum</h3>
-                      <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
-                      <img src="../img/concentration/con1.png" alt="">
-                        <br>
-                        <br>
+                <div class="col-12 col-lg-6">
+                    <div class="about-us-content mb-80">
+                        <h3 class="wow fadeInUp" data-wow-delay="100ms">We Live For Passion</h3>
+                        <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
                         <p class="wow fadeInUp" data-wow-delay="300ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
                         <p class="wow fadeInUp" data-wow-delay="400ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
+
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="mb-80 wow fadeInUp" data-wow-delay="100ms">
+                      <div class="single-portfolio-content">
+                          <img src="../img/concentration/con1.jpg" alt="">
+                          <div class="hover-content">
+                              <a href="../img/concentration/con1closeup.jpg" class="portfolio-img">+</a>
+                              <a href="../img/concentration/con1.jpg" class="portfolio-img">+</a>
+                          </div>
+                      </div>
                     </div>
                 </div>
             </div>
