--- a/concentration/concentration6.html
+++ b/concentration/concentration6.html
@@ -11,7 +11,7 @@
     <title>Shannon Lin | Art Portfolio</title>
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 
 </head>
 
@@ -31,7 +31,7 @@
                         <!-- Close -->
                         <button type="button" class="btn close-btn" data-dismiss="modal"><i class="ti-close"></i></button>
                         <!-- Form -->
-                        <form action="index.html" method="post">
+                        <form action="../index.html" method="post">
                             <input type="search" name="top-search-bar" class="form-control" placeholder="Search and hit enter...">
                             <button type="submit">Search</button>
                         </form>
@@ -51,7 +51,7 @@
                     <nav class="classy-navbar justify-content-between" id="alimeNav">
 
                         <!-- Logo -->
-                        <a class="nav-brand" href="./index.html"><img src="./img/core-img/sl_logo.png" alt=""></a>
+                        <a class="nav-brand" href="../index.html"><img src="../img/core-img/sl_logo.png" alt=""></a>
 
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
@@ -67,16 +67,16 @@
                             <!-- Nav Start -->
                             <div class="classynav">
                                 <ul id="nav">
-                                    <li><a href="./index.html">Home</a></li>
-                                    <li><a href="./portfolio.html">Portfolio</a>
+                                    <li><a href="../index.html">Home</a></li>
+                                    <li><a href="../portfolio.html">Portfolio</a>
                                     </li>
-                                    <li><a href="./about.html">About</a></li>
-                                    <li><a href="./gallery.html">Résumé</a></li>
+                                    <li><a href="../about.html">About</a></li>
+                                    <li><a href="../gallery.html">Résumé</a></li>
                                     <li><a href="https://shanngens.com">Shanngens</a>
                                         <ul class="dropdown">
-                                            <li><a href="./index.html">- About</a></li>
-                                            <li><a href="./index.html">- YouTube</a></li>
-                                            <li><a href="./index.html">- Instagram</a></li>
+                                            <li><a href="../index.html">- About</a></li>
+                                            <li><a href="../index.html">- YouTube</a></li>
+                                            <li><a href="../index.html">- Instagram</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="">Contact</a></li>
@@ -100,9 +100,9 @@
             <div class="row align-items-center">
               <div class="col-12 col-lg-12">
                   <div class="about-us-content mb-80">
-                      <h3 class="wow fadeInUp" data-wow-delay="100ms">No. 6: Lorem Ipsum</h3>
+                      <h3 class="wow fadeInUp" data-wow-delay="100ms">No. 1: Lorem Ipsum</h3>
                       <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
-                      <img src="img/concentration/con6.png" alt="">
+                      <img src="../img/concentration/con1.png" alt="">
                         <br>
                         <br>
                         <p class="wow fadeInUp" data-wow-delay="300ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
@@ -133,7 +133,7 @@
         <div class="instragram-feed-area owl-carousel">
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/insta/insta1new.png" alt="">
+                <img src="../img/insta/insta1new.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/BvFjCk9AML6/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -143,7 +143,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/insta/insta2.jpg" alt="">
+                <img src="../img/insta/insta2.jpg" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/B1P30YFlNDX/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -153,7 +153,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/insta/insta3.png" alt="">
+                <img src="../img/insta/insta3.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/Bz6zC3NFvvl/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -163,7 +163,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/insta/insta4.png" alt="">
+                <img src="../img/insta/insta4.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/Bww-8_Bg90r/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -173,7 +173,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/insta/insta5.png" alt="">
+                <img src="../img/insta/insta5.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/B1kWHPSFMUk/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -183,7 +183,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/insta/insta6.png" alt="">
+                <img src="../img/insta/insta6.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/BzUKL2SlsY2/">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -223,15 +223,15 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Shann
 
     <!-- **** All JS Files ***** -->
     <!-- jQuery 2.2.4 -->
-    <script src="js/jquery.min.js"></script>
+    <script src="../js/jquery.min.js"></script>
     <!-- Popper -->
-    <script src="js/popper.min.js"></script>
+    <script src="../js/popper.min.js"></script>
     <!-- Bootstrap -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
     <!-- All Plugins -->
-    <script src="js/alime.bundle.js"></script>
+    <script src="../js/alime.bundle.js"></script>
     <!-- Active -->
-    <script src="js/default-assets/active.js"></script>
+    <script src="../js/default-assets/active.js"></script>
 
 </body>
 
