moved portfolio to homepage

--- a/index.html
+++ b/index.html
@@ -152,7 +152,138 @@
         </div>
     </section>
     <!-- Welcome Area End -->
+    <div class="alime-portfolio-area section-padding-80 clearfix">
+        <div class="container-fluid">
 
+            <div class="row alime-portfolio">
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/concentration/con10.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration/concentration1.html">1</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio5.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration/concentration3.html">3</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                  <div class="col-12 col-sm-6 col-lg-6 single_gallery_item portfolio breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
+                      <div class="single-portfolio-content">
+                          <img src="img/breadth/breadth5.jpg" alt="">
+                          <div class="hover-content">
+                              <a href="concentration/concentration2.html">2</a>
+                          </div>
+                      </div>
+                  </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio7.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration/concentration4.html">4</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio1.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration/concentration5.html">5</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/breadth/breadth7.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration/concentration6.html">6</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/concentration/con5.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration/concentration7.html">7</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio8.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration/concentration8.html">8</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio4.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration/concentration9.html">9</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio2.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration1.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio6.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration/concentration10.html">10</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item portfolio mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio3.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration1.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item breadth mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/portfolio/portfolio13.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="concentration1.html">+</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
     <!-- Follow Area Start -->
     <section class="follow-area clearfix">
         <div class="container">
